Adding SEO-friendly changes.
- Adding titles to links;
- Adding description to each page;
- Adding branding to the pages.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Homepage of Croissant.com, the house of croissants.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant's Homepage</title>
+    <title>Croissant's Homepage - Croissant.com</title>
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
@@ -11,8 +12,8 @@
     <p>This site exhibits the <strong>picture</strong> of a croissant.</p>
     <br />
     <div class="navigation-links">
-      <a href="/photo.html">Check out the croissant</a>
-      <a href="/contact.html">Here's my contacts</a>
+      <a href="/photo.html" target="_blank" title="Croissant's photo link">Check out the croissant</a>
+      <a href="/contact.html" target="_blank" title="Link to my contacts">Here's my contacts</a>
     </div>
   </body>
 </html>
