--- a/photo.html
+++ b/photo.html
@@ -2,16 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="This page shows a photo of a croissant.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant's photo</title>
+    <title>Croissant's Photo - Croissant.com</title>
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    <img src="/img/croissant.webp" alt="Picture of a croissant" width="80%" />
+    <h1>Picture of a croissant</h1>
+    <img src="/img/croissant.webp" alt="Picture of a croissant" class="croissant-photo"/>
     <br />
     <div class="navigation-links">
-      <a href="/">Back to Homepage</a>
-      <a href="/contact.html">Here's my contacts</a>
+      <a href="/" target="_blank" title="Go back to homepage of Croissant.com">Back to Homepage</a>
+      <a href="/contact.html"  target="_blank" title="Link to my contacts">Here's my contacts</a>
     </div>
   </body>
 </html>
