More changes to get SEO - friendly.

--- a/contact.html
+++ b/contact.html
@@ -2,21 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="This are my contacts. I'm the maker of Croissant.com!">
+    <meta
+      name="description"
+      content="This are my contacts. I'm the maker of Croissant.com!"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My contacts - Croissant.com</title>
+    <title>My Contacts - Croissant.com</title>
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
     <h1>My Contacts</h1>
     <p>
       If you want to get in touch:
-      <a href="mailto:andreavetterda@croissant.com">andreavetterda@croissant.com</a>
+      <a href="mailto:andreavetterda@croissant.com"
+        >andreavetterda@croissant.com</a
+      >
     </p>
     <br />
     <div class="navigation-links">
-      <a href="/photo.html" target="_blank" title="Croissant's photo link">Check out the croissant!</a>
-      <a href="/" target="_blank" title="Go back to homepage of Croissant.com">Back to Homepage</a>
+      <a href="/photo.html" target="_blank" title="Picture of a croissant"
+        >Check out the croissant!</a
+      >
+      <a href="/" target="_blank" title="Homepage of Croissant.com"
+        >Back to Homepage</a
+      >
     </div>
   </body>
 </html>
