--- a/photo.html
+++ b/photo.html
@@ -2,18 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="This page shows a photo of a croissant.">
+    <meta
+      name="description"
+      content="This page shows a picture of a croissant."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant's Photo - Croissant.com</title>
+    <title>Picture of a Croissant - Croissant.com</title>
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
     <h1>Picture of a croissant</h1>
-    <img src="/img/croissant.webp" alt="Picture of a croissant" class="croissant-photo"/>
+    <img
+      src="/img/croissant.webp"
+      alt="Picture of a croissant"
+      class="croissant-photo"
+    />
     <br />
     <div class="navigation-links">
-      <a href="/" target="_blank" title="Go back to homepage of Croissant.com">Back to Homepage</a>
-      <a href="/contact.html"  target="_blank" title="Link to my contacts">Here's my contacts</a>
+      <a href="/" target="_blank" title="Homepage of Croissant.com"
+        >Back to Homepage</a
+      >
+      <a href="/contact.html" target="_blank" title="My contacts"
+        >Here's my contacts</a
+      >
     </div>
   </body>
 </html>
