--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Homepage of Croissant.com, the house of croissants.">
+    <meta
+      name="description"
+      content="Homepage of Croissant.com, the house of croissants."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Croissant's Homepage - Croissant.com</title>
     <link rel="stylesheet" href="/styles/style.css" />
@@ -12,8 +15,12 @@
     <p>This site exhibits the <strong>picture</strong> of a croissant.</p>
     <br />
     <div class="navigation-links">
-      <a href="/photo.html" target="_blank" title="Croissant's photo link">Check out the croissant</a>
-      <a href="/contact.html" target="_blank" title="Link to my contacts">Here's my contacts</a>
+      <a href="/photo.html" target="_blank" title="Picture of a croissant"
+        >Check out the croissant</a
+      >
+      <a href="/contact.html" target="_blank" title="My contacts"
+        >Here's my contacts</a
+      >
     </div>
   </body>
 </html>
